update hero font color to yellow

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
     <!-- hero section -->
 
-    <header class="position-relative">
+    <header id="hero" class="position-relative">
         <div class="bg-image text-white"
             style="background-image: url('assets/images/Sunny_BG_1.jpg'); background-size: cover; background-position: center;">
             <div class="bg-dark bg-opacity-50">
@@ -56,13 +56,7 @@
     </header>
 
 
-    <header>
-        <section id="branding" class="hero">
-            <div id="brandingContent">
-                <h1>Bring me sunshine</h1>
-            </div>
-        </section>
-    </header>
+
     <!-- Search section -->
     <section class="mb-4">
         <p class="mb-2">Enter a location to view weather forecast</p>
