--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <!-- hero section -->
 
     <header id="hero" class="position-relative">
-        <div class="bg-image text-white"
+        <div class="bg-image"
             style="background-image: url('assets/images/Sunny_BG_1.jpg'); background-size: cover; background-position: center;">
             <div class="bg-dark bg-opacity-50">
                 <div class="container py-5" style="min-height: 60vh;">
