--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
 
 
     <!-- Search section -->
-    <section class="mb-4">
-        <p class="mb-2">Enter a location to view weather forecast</p>
+    <section id='searchbar' class="mb-4">
+        <p class="fst-italic mb-2">Enter a location to view weather forecast</p>
         <form id="location-form" class="d-flex flex-column flex-sm-row gap-2">
             <input type="text" id="user-input" class="form-control search-input" placeholder="e.g. London, UK"
                 aria-label="Location" />
@@ -276,7 +276,7 @@
     </footer>
 
 
-    <script src="assets/js/script.js"></script>
+
     <script src="assets/js/script.js"></script>
     <!-- Bootstrap 5 JS (optional, if you later add interactive components) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
