fix horizontal overflow, update favourites to show as carousel on small screen

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
             <!-- Future days -->
             <!-- All set to one row, adjust min width in CSS to control wrapping -->
-            <div class="row g-3">
+            <div class="row">
                 <div class="col">
                     <div class="card weather-card">
                         <div class="day">{Day} - {Date}</div>
@@ -167,53 +167,100 @@
                         <div class="wind-speed">Wind</div>
                     </div>
                 </div>
-                <div class="col">
-                    <div class="card weather-card">
-                        <div class="day">{Day} - {Date}</div>
-                        <img src="" alt="Weather Icon" class="weather-icon" />
-                        <div class="temp-display">{Temp} (Feels like)</div>
-                        <div class="weather-type">{Weather}</div>
-                        <div class="rain-chance text-muted small">(Chance of rain)%</div>
-                        <div class="wind-speed">Wind</div>
-                    </div>
-                </div>
-
             </div>
         </div>
     </div>
-    <!-- Favourites column -->
+    <!-- Favourites area -->
     <div class="row">
         <div class="col-12">
             <h2 class="h5">Favourite locations</h2>
         </div>
-        <!-- Single favourite location card (placeholder) -->
-        <div class="card col-6 mb-3">
-            <div class="weather-card">
-                <div class="d-flex justify-content-between">
-                    <div>
-                        <div class="fw-semibold">{Location}</div>
-                        <div class="small text-muted">Weather</div>
-                    </div>
-                    <div class="text-end">
-                        <div class="fw-semibold">28°C</div>
-                        <div class="small text-muted">Sample data</div>
+        <!-- Location as cards for md and larger screens -->
+        <div class="d-none d-md-block">
+            <div class="card col mb-3">
+                <div class="weather-card">
+                    <div class="d-flex justify-content-between">
+                        <div>
+                            <div class="fw-semibold">{Location}</div>
+                            <div class="small text-muted">Weather</div>
+                        </div>
+                        <div class="text-end">
+                            <div class="fw-semibold">28°C</div>
+                            <div class="small text-muted">Sample data</div>
+                        </div>
                     </div>
                 </div>
+            </div>
+
+            <!-- Placeholder for additional favourites -->
+            <div class="card col mb-3">
+                <div class="weather-card">
+                    <div class="d-flex justify-content-between">
+                        <div>
+                            <div class="fw-semibold">More favourite locations will appear here (add + symbol)
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Location as carousel for smaller screens -->
+        <div class="d-block d-md-none">
+            <!--Carousel-->
+            <div id="favouritescarousel" class="carousel slide carousel-fade " data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <!--Weather Card-->
+                        <div class="card col mb-3">
+                            <div class="weather-card">
+                                <div class="d-flex justify-content-between">
+                                    <div>
+                                        <div class="fw-semibold">{Location}</div>
+                                        <div class="small text-muted">Weather</div>
+                                    </div>
+                                    <div class="text-end">
+                                        <div class="fw-semibold">28°C</div>
+                                        <div class="small text-muted">Sample data</div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <!--Weather Card-->
+                        <div class="card col mb-3">
+                            <div class="weather-card">
+                                <div class="d-flex justify-content-between">
+                                    <div>
+                                        <div class="fw-semibold">Location2</div>
+                                        <div class="small text-muted">Weather2</div>
+                                    </div>
+                                    <div class="text-end">
+                                        <div class="fw-semibold">8°C</div>
+                                        <div class="small text-muted">Sample data</div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#favouritescarousel"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#favouritescarousel"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
             </div>
         </div>
 
-        <!-- Placeholder for additional favourites -->
-        <div class="card col-6 mb-3">
-            <div class="weather-card">
-                <div class="d-flex justify-content-between">
-                    <div>
-                        <div class="fw-semibold">More favourite locations will appear here</div>
-                    </div>
-                </div>
-            </div>
-        </div>
 
     </div>
+    </div>
+    </main>
     <!-- Footer -->
     <footer>
         <p>
