--- a/index.html
+++ b/index.html
@@ -189,8 +189,12 @@
                         <div class="weather-card">
                             <div class="d-flex justify-content-between">
                                 <div>
-                                    <div class="fw-semibold">More favourite locations will appear here (add + symbol)
+                                    <div class="fw-semibold">Add Card
                                     </div>
+                                    <button class="add-new-card">
+                                        <img src="" alt="Add new favourite"
+                                            class="add-icon" /><!-- or span/ icon from font awesome -->
+                                    </button>
                                 </div>
                             </div>
                         </div>
@@ -198,6 +202,12 @@
                 </div>
                 <!-- Location as carousel for smaller screens -->
                 <div class="d-block d-md-none">
+                    <div>
+                        <button class="add-new-card">
+                            <img src="" alt="Add new favourite"
+                                class="add-icon" /><!-- or span/ icon from font awesome -->
+                        </button>
+                    </div>
                     <!--Carousel-->
                     <div id="favouritescarousel" class="carousel slide carousel-fade " data-bs-ride="carousel">
                         <div class="carousel-inner">
