--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                         <div class="d-flex justify-content-between align-items-center mb-2">
                             <h2 class="h5">Today</h2>
                             <span class="text-muted small">
-                                Current location: <strong>LOCATION</strong>
+                                Current location: <strong id="current-location">LOCATION</strong>
                             </span>
                         </div>
                         <!-- Today card -->
@@ -91,7 +91,7 @@
                                 <div class="row align-items-center">
                                     <div class="col-md-4 mb-3 mb-md-0">
                                         <div class="text-center text-md-start">
-                                            <div class="temp-display">{Temp}</div>
+                                            <div id="temp-display" class="temp-display">{Temp}</div>
                                             <div id="feels-like" class="text-muted small">(Feels like)</div>
                                         </div>
                                     </div>
