--- a/index.html
+++ b/index.html
@@ -71,13 +71,20 @@
                         <div class="col-lg-3 ">
                             <h2 class="h5">Forecast Options</h2>
                             <div class="list-group">
+                                <!-- Radio button to select outputs-->
                                 <button type="button" class="list-group-item list-group-item-action active"
-                                    aria-current="true">Temperature
+                                    aria-current="true">
+                                    <input type="radio" id="tempradio" name="fav_language" value="Temperature" checked>
+                                    <label for="tempradio">Temperature</label><br>
                                 </button>
-                                <button type="button" class="list-group-item list-group-item-action">Wind</button>
-                                <button type="button"
-                                    class="list-group-item list-group-item-action">Precipitation</button>
+                                <button type="button" class="list-group-item list-group-item-action"><input type="radio"
+                                        id="windradio" name="fav_language" value="wind" checked>
+                                    <label for="windradio">Wind</label><br></button>
+                                <button type="button" class="list-group-item list-group-item-action"><input type="radio"
+                                        id="precipitationradio" name="fav_language" value="precipitation" checked>
+                                    <label for="precipitationradio">Precipitation</label><br></button>
                                 <input type="number" id="forecastDays" placeholder="Number of days">
+
                             </div>
                         </div>
 
