--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                             <h2 class="h5">Forecast Options</h2>
                             <div class="list-group">
                                 <!-- Radio button to select outputs-->
-                                <button type="button" class="list-group-item list-group-item-action active"
+                                <button type="button" class="list-group-item list-group-item-action"
                                     aria-current="true">
                                     <input type="radio" id="tempradio" name="fav_language" value="Temperature" checked>
                                     <label for="tempradio">Temperature</label><br>
@@ -83,7 +83,11 @@
                                 <button type="button" class="list-group-item list-group-item-action"><input type="radio"
                                         id="precipitationradio" name="fav_language" value="precipitation" checked>
                                     <label for="precipitationradio">Precipitation</label><br></button>
-                                <input type="number" id="forecastDays" placeholder="Number of days">
+
+                                <input type="number" id="forecastDays" placeholder="Number of days"
+                                    class="list-group-item" min="1" max="7" value="5" />
+                                <button id="applyDataFilters" type="submit"
+                                    class="btn list-group-item list-group-item-action active text-center">Apply</button>
 
                             </div>
                         </div>
