wrap row to fix horixontal overflow

--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
     <header id="hero" class="position-relative">
 
 
+        <div class="container-fluid py-5">
+            <div class="row align-items-center">
 
-        <div class="row align-items-center">
+                <h1 class="logo-text display-4 fw-bold">Bring me sunshine!</h1>
 
-            <h1 class="logo-text display-4 fw-bold">Bring me sunshine!</h1>
-
+            </div>
         </div>
-
 
 
 
@@ -243,7 +243,6 @@
                     </div>
                 </div>
             </div>
-        </div>
         </div>
     </main>
     <!-- Footer -->
