--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
                         <a class="nav-link" href="#favourites">Favourites</a>
                     </li>
                     <li class="nav-item">
-                        <a class="btn nav-link" href="https://severeweather.wmo.int/">View Extreme Weather</a>
+                        <a class="btn nav-link" href="https://severeweather.wmo.int/" target="_blank"
+                            rel="noopener">View Extreme Weather</a>
                     </li>
                 </ul>
             </div>
