update date text color

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                             <!-- Current location heading -->
                             <div class="d-flex justify-content-between align-items-center mb-2">
                                 <h2 class="h5">Current location: <strong id="current-location">LOCATION</strong></h2>
-                                <span class="text-muted small">
+                                <span class="text-muted small date-text">
                                     Today's Date: <strong><span id="current-date">{Date}</span></strong>
                                 </span>
                             </div>
