update card aligment

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="container-fluid py-5">
             <div class="row align-items-center">
 
-                <h1 class="logo-text display-4 fw-bold">Bring me sunshine!</h1>
+                <h1 class="logo-text display-4 fw-bold">Bring Me Sunshine!</h1>
 
             </div>
         </div>
@@ -138,7 +138,7 @@
                         <!-- Future days -->
                         <!-- All set to one row, adjust min width in CSS to control wrapping -->
                         <div id="forecast-container" class="row">
-                            <div class="col forecast-card">
+                            <div class="col-6 col-md-4 col-lg-2 forecast-card">
                                 <div class="card weather-card">
                                     <div class="day"></div>
                                     <img src="null" alt="Weather Icon" class="weather-icon" />
@@ -152,7 +152,7 @@
                                 </div>
                             </div>
 
-                            <div class="col forecast-card">
+                            <div class="col-6 col-md-4 col-lg-2 forecast-card">
                                 <div class="card weather-card">
                                     <div class="day"></div>
                                     <img src="null" alt="Weather Icon" class="weather-icon" />
@@ -163,7 +163,7 @@
                                     <div class="wind-speed">Wind</div>
                                 </div>
                             </div>
-                            <div class="col forecast-card">
+                            <div class="col-6 col-md-4 col-lg-2 forecast-card">
                                 <div class="card weather-card">
                                     <div class="day"></div>
                                     <img src="null" alt="Weather Icon" class="weather-icon" />
@@ -174,7 +174,7 @@
                                     <div class="wind-speed">Wind</div>
                                 </div>
                             </div>
-                            <div class="col forecast-card">
+                            <div class="col-6 col-md-4 col-lg-2 forecast-card">
                                 <div class="card weather-card">
                                     <div class="day"></div>
                                     <img src="" alt="Weather Icon" class="weather-icon" />
@@ -185,7 +185,7 @@
                                     <div class="wind-speed">Wind</div>
                                 </div>
                             </div>
-                            <div class="col forecast-card">
+                            <div class="col-6 col-md-4 col-lg-2 forecast-card">
                                 <div class="card weather-card">
                                     <div class="day"></div>
                                     <img src="" alt="Weather Icon" class="weather-icon" />
