beginning favourite section

--- a/index.html
+++ b/index.html
@@ -288,8 +288,8 @@
                     <!-- Saved location cards -->
                     <div class="favourite-location-container">
                         <!--template of cards to add -->
-                        <div class="card favourite-card col mb-3">
-                            <div class="Location"></div>
+                        <div class="card favourite-card col mb-3 d-none">
+                            <div id="favourite-title" class="Location"></div>
                             <img src="assets/images/logo.png" alt="Weather Icon" class="weather-icon" />
                             <!-- placeholder image-->
                             <div class="temp-display"></div>
