responsive searchbar width for mobile

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
         </div>
     </header>
     <main>
-        <div id="bg-image">
-            <div class="container-fluid py-4 ">
+        <div id="bg-image" class="container-fluid px-2 px-md-3">
+            <div class="py-4 ">
                 <!-- Search section -->
                 <section id='searchbar' class="mb-4 d-flex flex-column align-items-center">
                     <p class="fst-italic mb-2">Enter a location to view weather forecast</p>
@@ -97,7 +97,7 @@
                             </div>
                         </div>
 
-                        <div class="col-lg-9">
+                        <div class="col-lg-9 p-2">
                             <!-- Current location heading -->
                             <div class="d-flex justify-content-between align-items-center mb-2" style="height: 39.2px">
                                 <h2 class="h5">
