reinstate d-none class

--- a/index.html
+++ b/index.html
@@ -78,10 +78,10 @@
 
                             </div>
                             <div class="col-12 py-5 py-md-3">
-                                <button id="add-favourite-btn" class="btn">
+                                <button id="add-favourite-btn" class="btn d-none">
                                     Add to Favourites
                                 </button>
-                                <p id="max-favourites-msg" class="">You may only add a maximum of 3
+                                <p id="max-favourites-msg" class="d-none">You may only add a maximum of 3
                                     favourite
                                     locations.</p>
                             </div>
