HTML validation fix: input descendant of button

--- a/index.html
+++ b/index.html
@@ -92,24 +92,23 @@
                                     <!-- Radio button to select outputs-->
                                     <form id="forecast-options-form"
                                         class="d-flex flex-column flex-md-row flex-xl-column gap-2">
-                                        <button type="button" class="list-group-item list-group-item-action"
+                                        <div type="button" class="list-group-item list-group-item-action"
                                             aria-current="true">
-                                            <input type="checkbox" id="tempCheck" name="fav_language"
-                                                value="Temperature" checked />
+                                            <input type="checkbox" id="tempCheck" class="filter-input"
+                                                name="fav_language" value="Temperature" checked />
                                             <label for="tempCheck">Temperature</label><br />
-                                        </button>
+                                        </div>
 
-                                        <button type="button" class="list-group-item list-group-item-action">
+                                        <div type="button" class="list-group-item list-group-item-action">
                                             <input type="checkbox" id="windCheck" name="fav_language" value="wind"
                                                 checked />
                                             <label for="windCheck">Wind</label><br />
-                                        </button>
-
-                                        <button type="button" class="list-group-item list-group-item-action">
+                                        </div>
+                                        <div type="button" class="list-group-item list-group-item-action">
                                             <input type="checkbox" id="humidityCheck" name="fav_language"
                                                 value="humidity" checked />
                                             <label for="humidityCheck">Humidity</label><br />
-                                        </button>
+                                        </div>
 
                                         <input type="number" id="forecastDays" placeholder="Number of days:"
                                             class="list-group-item" min="1" max="7" value="5" />
