HTML validation fix: h3 no longer child of span

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                                 <span class="h5">
                                     Current location:
 
-                                    <h3><strong id="current-location" class="me-4">LOCATION</strong></h3>
+                                    <strong id="current-location" class="me-4 h3">LOCATION</strong>
                                 </span>
 
                                 <span class="text-black-70 small">
