--- a/index.html
+++ b/index.html
@@ -92,19 +92,19 @@
                                     <!-- Radio button to select outputs-->
                                     <form id="forecast-options-form"
                                         class="d-flex flex-column flex-md-row flex-xl-column gap-2">
-                                        <div type="button" class="list-group-item list-group-item-action"
+                                        <div class="list-group-item list-group-item-action"
                                             aria-current="true">
                                             <input type="checkbox" id="tempCheck" class="filter-input"
                                                 name="fav_language" value="Temperature" checked />
                                             <label for="tempCheck">Temperature</label><br />
                                         </div>
 
-                                        <div type="button" class="list-group-item list-group-item-action">
+                                        <div class="list-group-item list-group-item-action">
                                             <input type="checkbox" id="windCheck" name="fav_language" value="wind"
                                                 checked />
                                             <label for="windCheck">Wind</label><br />
                                         </div>
-                                        <div type="button" class="list-group-item list-group-item-action">
+                                        <div class="list-group-item list-group-item-action">
                                             <input type="checkbox" id="humidityCheck" name="fav_language"
                                                 value="humidity" checked />
                                             <label for="humidityCheck">Humidity</label><br />
